Fix tests and width jumping

--- a/packages/web-components/src/components/va-button-segmented/va-button-segmented.scss
+++ b/packages/web-components/src/components/va-button-segmented/va-button-segmented.scss
@@ -51,12 +51,7 @@
   }
 }
 
-@media screen and (min-width: $tablet) {
-  .va-segmented-button__button {
-    max-width: 160px;
-    padding: var(--vads-spacing-1p5) var(--vads-spacing-2p5) calc(var(--vads-spacing-1p5) - 4px) var(--vads-spacing-2p5);
-  }
-}
+
 
 .va-segmented-button__button:hover {
   background-color: var(--vads-button-color-background-disabled-on-light);
@@ -68,6 +63,7 @@
   background-color: var(--vads-color-white);
   box-shadow: 0 4px 0 0 var(--vads-color-white);
   font-weight: 700;
+  padding: 0;
 
 }
 
@@ -82,5 +78,15 @@
 .va-segmented-button__button[aria-pressed="true"]:active:focus {
   background-color: var(--vads-color-action-focus-on-light);
   box-shadow: 0 4px 0 0 var(--vads-color-base);
+}
+
+@media screen and (min-width: $tablet) {
+  .va-segmented-button__button {
+    max-width: 160px;
+    padding: var(--vads-spacing-1p5) var(--vads-spacing-2p5) calc(var(--vads-spacing-1p5) - 4px) var(--vads-spacing-2p5);
+  }
+  .va-segmented-button__button:active, .va-segmented-button__button[aria-pressed=true] {
+    padding: var(--vads-spacing-1p5) calc(var(--vads-spacing-2p5) - 1px) calc(var(--vads-spacing-1p5) - 4px) calc(var(--vads-spacing-2p5) - 1px);
+  }
 }
 
